--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -14,9 +14,9 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: "^1.17"
+          go-version: "^1.23"
 
-      - run: go install github.com/golang/mock/mockgen@v1.6.0
+      - run: go install go.uber.org/mock/mockgen@v0.5.0
 
       - run: make genmocks
 
