--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,4 @@
 # CODEOWNERS: https://help.github.com/articles/about-codeowners/
 
 # Primary repo maintainers
-* @mpetrun5 @tcar121293 @MakMuftic @nmlinaric @freddyli7
-tss/*   @timoth-y
+* @mpetrun5 @tcar121293 @MakMuftic @nmlinaric @mpetrunic
