--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,22 +1,8 @@
-# Refer to golangci-lint's example config file for more options and information:
-# https://github.com/golangci/golangci-lint/blob/master/.golangci.reference.yml
-
+version: "2"
 run:
-  timeout: 5m
   modules-download-mode: readonly
-  exclude-dirs:
-    - vendor
-    - third_party
-
 linters:
   enable:
-    - errcheck
-    - gosimple
-    - goimports
-    - govet
-    - staticcheck
-    - unused
-    - ineffassign
     - bodyclose
     - gocognit
     - godox
@@ -26,7 +12,26 @@ linters:
     - reassign
     - wastedassign
     - whitespace
-
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
+formatters:
+  enable:
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
