--- a/.github/workflows/publish-tagged.yml
+++ b/.github/workflows/publish-tagged.yml
@@ -1,4 +1,4 @@
-name: Publish Latest Docker Image
+name: Publish Tagged Docker Image
 
 permissions:
   packages: write
@@ -42,4 +42,4 @@ jobs:
             GH_USER_NAME=${{ secrets.GH_USER_NAME }}
             GH_USER_TOKEN=${{ secrets.GHCR_TOKEN }}
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.TAG }}
+            ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
