--- a/.github/workflows/publish-tagged.yml
+++ b/.github/workflows/publish-tagged.yml
@@ -3,6 +3,10 @@ name: Publish Tagged Docker Image
 permissions:
   packages: write
   contents: read
+  
+env:
+  GO111MODULE: on
+  GOPRIVATE: github.com/sprintertech
 
 on:
   release:
