--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,6 +20,10 @@ on:
     #        *  * * * *
     - cron: '30 1 * * 0'
 
+env:
+  GO111MODULE: on
+  GOPRIVATE: github.com/sprintertech
+
 jobs:
   CodeQL-Build:
     runs-on: ubuntu-latest
