--- a/.github/workflows/publish-binaries.yml
+++ b/.github/workflows/publish-binaries.yml
@@ -7,6 +7,10 @@ on:
   release:
     types: [published]
 
+env:
+  GO111MODULE: on
+  GOPRIVATE: github.com/sprintertech
+
 jobs:
   publish:
     name: publish
