Add token to env

--- a/.github/workflows/publish-tagged.yml
+++ b/.github/workflows/publish-tagged.yml
@@ -14,6 +14,8 @@ env:
   REGISTRY: 'ghcr.io'
   GO111MODULE: on
   GOPRIVATE: github.com/sprintertech
+  TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+
 
 jobs:
   build-and-push:
