--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -14,6 +14,7 @@ env:
   GOPRIVATE: github.com/sprintertech
   ORG: 'sprintertech'
   REGISTRY: 'ghcr.io'
+  TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
 
 jobs:
   build-and-push:
