--- a/.github/workflows/deploy-portainer-staging.yml
+++ b/.github/workflows/deploy-portainer-staging.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.image_version }}
+    #if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.image_version }}
     runs-on:
       group: portainer-deployment
     environment: staging
