--- a/.github/workflows/deploy-portainer-staging.yml
+++ b/.github/workflows/deploy-portainer-staging.yml
@@ -13,7 +13,6 @@ on:
         description: 'Signing version. Example: v2.0.0'
         required: true
         default: latest
-  pull_request: null
 
 env:
   PORTAINER_ENDPOINT_ID: 8
@@ -21,7 +20,7 @@ env:
 
 jobs:
   deploy:
-    #if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.image_version }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.image_version }}
     runs-on:
       group: portainer-deployment
     environment: staging
