--- a/deploy/docker-compose.staging.yml
+++ b/deploy/docker-compose.staging.yml
@@ -4,9 +4,9 @@ services:
     command: 
       - |
         mkdir -p /cfg/keyshares
-        echo $${CONFIG_FULL} | base64 --decode > $${CONFIG_PATH}
-        echo $${KEYSHARE} | base64 --decode > $${KEYSHARE_PATH}
-        /signing run --config $${CONFIG_PATH} --staging
+        echo ${${hack}CONFIG_FULL} | base64 --decode > ${${hack}CONFIG_PATH}
+        echo ${${hack}KEYSHARE} | base64 --decode > ${${hack}KEYSHARE_PATH}
+        /signing run --config ${${hack}CONFIG_PATH} --staging
     entrypoint: ["/bin/sh", "-c"]
     environment:
       - CONFIG_FULL=${CONFIG_1_FULL}
@@ -29,9 +29,9 @@ services:
     command: 
       - |
         mkdir -p /cfg/keyshares
-        echo $${CONFIG_FULL} | base64 --decode > $${CONFIG_PATH} 
-        echo $${KEYSHARE} | base64 --decode > $${KEYSHARE_PATH}
-        /signing run --config $${CONFIG_PATH} --staging
+        echo ${${hack}CONFIG_FULL} | base64 --decode > ${${hack}CONFIG_PATH} 
+        echo ${${hack}KEYSHARE} | base64 --decode > ${${hack}KEYSHARE_PATH}
+        /signing run --config ${${hack}CONFIG_PATH} --staging
     entrypoint: ["/bin/sh", "-c"]
     environment:
       - CONFIG_FULL=${CONFIG_2_FULL}
@@ -51,9 +51,9 @@ services:
     command: 
       - |
         mkdir -p /cfg/keyshares
-        echo $${CONFIG_FULL} | base64 --decode > $${CONFIG_PATH}
-        echo $${KEYSHARE} | base64 --decode > $${KEYSHARE_PATH}
-        /signing run --config $${CONFIG_PATH} --staging
+        echo ${${hack}CONFIG_FULL} | base64 --decode > ${${hack}CONFIG_PATH}
+        echo ${${hack}KEYSHARE} | base64 --decode > ${${hack}KEYSHARE_PATH}
+        /signing run --config ${${hack}CONFIG_PATH} --staging
     entrypoint: ["/bin/sh", "-c"]
     environment:
       - CONFIG_FULL=${CONFIG_3_FULL}
