--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,14 +24,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
+      - id: go-cache-paths
+        run: |
+          echo "GO_BUILD=$(go env GOCACHE)" >> "$GITHUB_OUTPUT"
+          echo "GO_MOD=$(go env GOMODCACHE)" >> "$GITHUB_OUTPUT"
       - uses: actions/cache@v4
         with:
-          path: ~/go/pkg/mod
+          path: |
+            ${{ steps.go-cache-paths.outputs.GO_BUILD }}
+            ${{ steps.go-cache-paths.outputs.GO_MOD }}
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
